--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/www.js",
-    "build": "tsc -p . && tscp",
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/www.ts"
+    "build": "tsc -p . && ts-node ./src/config/swagger-gen.ts && tscp",
+    "dev": "ts-node ./src/config/swagger-gen.ts && nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/www.ts",
+    "swagger-gen": "ts-node ./src/config/swagger-gen.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.6",
     "debug": "4.3.7",
+    "express-basic-auth": "^1.2.1",
     "http-errors": "~2.0.0",
     "morgan": "~1.10.0",
     "pug": "3.0.3",
     "sqlite3": "^5.1.7",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tscp": "^1.0.0",
     "typescript": "^5.6.2"
   },
@@ -26,6 +31,8 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.4",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "express": "^4.21.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
